--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 h1.titulo{
     font-family: "Staatliches", sans-serif;
-    font-size: 8rem;
+    font-size: 8rem !important;
 }
 
     .maqueta{max-width: 300px;}
