--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
@@ -14,6 +16,15 @@
 h1.titulo{
     font-family: "Staatliches", sans-serif;
     font-size: 8rem !important;
+}
+h2.titulo2{
+    font-family: "Staatliches", sans-serif;
+    font-size: 3rem !important;
+}
+body {
+    font-family: "Fira Sans", sans-serif;
+    font-size: 20px;
+
 }
 
     .maqueta{max-width: 300px;}
