--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
@@ -25,6 +26,10 @@ body {
     font-family: "Fira Sans", sans-serif;
     font-size: 20px;
 
+}
+h3.subt{
+    font-family: "IBM Plex Mono", monospace;
+    font-size: 20px;
 }
 
     .maqueta{max-width: 300px;}
