--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ h2.titulo2{
 }
 body {
     font-family: "Fira Sans", sans-serif;
-    font-size: 20px;
+    font-size: 20px !important;
 
 }
 h3.subt{
     font-family: "IBM Plex Mono", monospace;
-    font-size: 20px;
+    font-size: 20px !important;
 }
 
     .maqueta{max-width: 300px;}
