--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --color-rojo: #D62420;
     --color-blanco: #FFFFFF;
     --color-blanco2: #D9D9D9;
+    --color-blanco3: #f3f1f1;
 
     --font-titulo: "Staatliches", sans-serif;
     --font-subtitulo: "IMB Plex Mono", monospace;
@@ -91,6 +92,11 @@ h3.subtosc{
     font-variant-numeric:  1.3rem;
     color: var(--color-blanco);
 }
+h3.subt{
+    font-family: var(--font-subtitulo);
+    font-variant-numeric:  1.3rem;
+    color: var(--color-gris);
+}
 h3.subtrojo{
     font-family: var(--font-subtitulo);
     font-size: 1.7rem;
@@ -160,6 +166,9 @@ a.subti{
 }
 .cajacolor {
     background-color: #D9D9D9 !important;
+  }
+.cajacolor2 {
+    background-color:#212121;
   }
 .portada {
     width: 100vw;
