--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ h1.protitulo{
     color: var(--color-rojo);
 }
 
-
 @media(max-width: 1200px) {  
     h1.protitulo{
         font-family: var(--font-titulo);
@@ -170,6 +169,9 @@ a.subti{
 .cajacolor2 {
     background-color:#212121;
   }
+.cajacolor3 {
+    background-color: #D1D9DB;
+}
 .portada {
     width: 100vw;
     height: 100vh;
@@ -180,6 +182,12 @@ a.subti{
     height: 100%;
     object-fit: cover;
 }
+@media(max-width: 300px) { 
+    .container{
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+}    
 /* justificacion*/
 
 /*
