agregué mas imagenes a la pagina de lampara

--- a/style.css
+++ b/style.css
@@ -194,6 +194,9 @@ a.subti{
 .carousel-control-next-icon{
     background-color: #f3f1f1;
 }
+.entre{
+    justify-content: space-between;
+}
 /* justificacion*/
 
 /*
