--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ h2.amatitulo2{
     font-size: 3rem;
     color: var(--color-blanco);
 }
+.barranav{
+    font-family: var(--font-titulo);
+    font-size: 5rem;
+    color: var(--color-blanco);
+}
 /*h3*/
 
 h3.subtosc{
@@ -223,6 +228,12 @@ a.subti{
 }
 .entre{
     justify-content: space-between;
+}
+.verproyecto {
+    color: yellow;
+    font-family: var(--font-titulo);
+    font-size: 1.7rem;
+    
 }
 /* justificacion*/
 
