--- a/style.css
+++ b/style.css
@@ -235,6 +235,12 @@ a.subti{
     font-size: 1.7rem;
     
 }
+.contacto {
+    color: #231F20
+    font-family: var(--font-subtitulo);
+    font-size: 1.7rem;
+    
+}
 /* justificacion*/
 
 /*
